--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.8",
     "expo-app-loading": "^2.1.1",
+    "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
