--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
